2009-01-31 Guido Scholz <guido.scholz@bayernline.de>
	* zimo.c: Support for GA switching added. Thread event loop
	design cleaned up. New Copyright/License header according to GPL
	rules (http://www.fsf.org/licensing/licenses/gpl-howto.html).
	* dcc-address.*: Basic functions to map address/port values
	between NMRA and Lenz-DCC address scheme added.
	* ddl.c, ddl-s88.c, hsi-88.c, i2c-dev.c, ib.c, li100.c,
	loconet.c, loopback.c, m605x.c, selectrix.c, zimo.c,
	config-srcpd.c: Harmonized usage of "comment" tag.

2009-01-26 Guido Scholz <guido.scholz@bayernline.de>
	* loopback.c: Cleaner design for bus thread event loop applied.

2009-01-24 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.*, ib.*, io.*, zimo.c: Support for circumvention
	of Intellibox BIBA function added to to speed up connection
	initialization if user configures the proper baudrate in
	srcpd.conf.
	* ib.c: Very basic support added to print firmware version to
	syslog.

2009-01-21 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.c: Fixed counting of interface bus number,
	reported by Heiko Gau.
	* ddl.c, ddl_maerklin.c, ddl_nmra.c, ddl-s88.c, hsi-88.c,
	i2c-dev.c, ib.c, li100.c, loconet.c, loopback.c, m605x.c,
	selectrix.c, srcp-command.c, srcpd.c, srcp-fb.c, srcp-time.c,
	zimo.c: Unhide all usleep() system error messages.

2009-01-19 Guido Scholz <guido.scholz@bayernline.de>
	* hsi-88.c, ib.c, ddl-s88.c, li100.c, srcpd.c: All sleep()
	interruptions made visible as error level syslog messages.

2009-01-18 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-time.*, srcp-command.c: Fixed locking of time variable(s),
	suspend time thread if not used.

2009-01-17 Matthias Trute <mtrute@users.sourceforge.net>
	* loconet.*: Support for GA and FB devices, communication
	  can be routed via a loconetovertcp server (e.g. JMRI or
	  lbserver)

2009-01-17 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-time.*, srcp-command.c: Support for TERM 0 TIME added.
