@@ -17,7 +17,10 @@
 #ifndef _IO_H
 #define _IO_H
 
+#include <unistd.h>
+
 #include "config-srcpd.h"
+
 
 int  readByte(bus_t bus, int wait, unsigned char *the_byte);
 void writeByte(bus_t bus, const char the_byte, unsigned long msec);
